--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
-name = "iris"
+name = "arweave_bundle_parser"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+bundlr-sdk = { git = "https://github.com/Salka1988/bundlr-sdk", branch = "salka1988/add_data_item"}
+tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7"
+reqwest = { version = "0.11", features = ["json", "stream"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-bytes = "1.2"
-thiserror = "1.0"
-avro-rs = "0.13"
-hex = "0.4.3"
-num-bigint = "0.2.6"
-num-traits = "0.2.19"
-sha2 = "0.10.8"
-base64 = "0.22.1"
-
-bundlr-sdk = { git = "https://github.com/Salka1988/bundlr-sdk", branch = "salka1988/add_data_item"}
+futures-util = "0.3"
+num-bigint = "0.4"
+num-traits = "0.2"
+thiserror = "1.0.63"
